# metaprogramming-survey-code

./: .gitignore  .ocamlformat  BUILDING.md  DeriveMap.v  DeriveMap2.v  DeriveMap3.v  DeriveMapUniform.v  DeriveMapWIP.v  LICENSE  Main.v  Makefile  NOTES.md  README.md  TM.v  coq-metaprogramming.opam  derive-functor.agda-lib  dune  dune-project  lake-manifest.json  lakefile.lean
Agda/: DeriveFunctor.agda  derive-functor.agda-lib
DeriveFunctor/Agda/: DeriveFunctor.agda  Test.agda
DeriveFunctor/Elpi/: Command.v  Example.v  dune  tmp.v
DeriveFunctor/Functor/: Functor.v  dune
DeriveFunctor/Lean/: Command.lean
DeriveFunctor/Ltac2/: Command.v  Example.v  Utils.v  dune
DeriveFunctor/MetaCoq/: CommandDeBruijn.v  Utils.v  dune
DeriveMap/Lean/: Command.lean  NameDb.lean
DeriveMap/MetaCoq/: API.v  Command.v  CommandAPI.v  CommandDeBruijn.v  Examples.v  LocallyNameless.v  Utils.v  dune
DeriveMap/elpi/: Command.v  Example.v
DeriveMap/ltac2/: Command.v
Elpi/: DeriveFunctor.v
Lean/: DeriveFunctor.lean  lake-manifest.json  lakefile.lean
Ltac2/: DeriveFunctor.v
MetaRocq/: DeriveFunctor.v
OCaml_de_Bruijn/: derive-functor.opam
OCaml_de_Bruijn/plugin/: derive_functor.ml  dune  g_derivefunctor.mlg  log.ml
OCaml_locally_nameless/: DeriveFunctor.v  dune-project
OCaml_locally_nameless/plugin/: derive_functor.ml
_build/: .db  .digest-db  log
_build/default/: README.md  coq-metaprogramming.dune-package  coq-metaprogramming.install  coq-metaprogramming.opam
derive-map/elpi/: Example.v  _CoqProject
misc/: LeanExample.lean  LocallyNameless.v
(+66 files in other folders)
