(lang dune 3.16)

(using coq 0.9)

(name derive-functor)

(generate_opam_files true)

(package
 (name derive-functor)
 (maintainers "Mathis Bouverot-Dupuis (mathis.bouverot@ens.psl.eu)")
 (authors "Mathis Bouverot-Dupuis")
 (synopsis "OCaml plugin - de Bruijn version")
 (depends
  (coq
   (= 8.20.1))))
